<?xml version="1.0" encoding="utf-8"?>
<!-- 
	Home screen layout, by Elizabeth Davis
	copyright 2012

 -->

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@color/background"
	    android:orientation="vertical" >
	
	
	    <LinearLayout
			android:layout_margin="20dp"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical"
	        android:layout_gravity="center"
	        android:background="@color/content"
	        android:padding="10dp" >
	    
	    	<TextView
	        	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
	    	    android:gravity="center"
	    	    android:textSize="16dp"
	        	android:text="@string/title"
	        	android:textColor="@color/black" />
	    
		    <!-- <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/teacher_head" 
		        android:textColor="@color/black" />
		    
		    <TextView
				style="@style/home_blurb"
		        android:text="@string/teacher_blurb" />
		        
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/student_head"
		        android:textColor="@color/black"  /> !-->
		    
		    <TextView
		        android:text="@string/general_blurb" 
		        style="@style/home_blurb" />
		    
	
		    <LinearLayout
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal"
		        android:gravity="center">
		        
		    	<Button
		    	    android:id="@+id/go_to_app"
		        	android:layout_width="70dp"
		        	android:layout_height="35dp"
		        	android:textSize="12dp"
		        	android:gravity="center"
		        	android:text="@string/go_to_app" />
		    	
		        
		    </LinearLayout>	
		</LinearLayout>
	</LinearLayout>
</ScrollView>	